# Data-Profiling

./: .gitignore  README.md  pyproject.toml
config/: profiling.example.yml
db_profiler/: __init__.py  cli.py  config.py  loaders.py  output.py  runner.py  ydata_profile.py
db_profiler/features/: __init__.py  case_profile.py  format_profile.py  inferred_fk_profile.py  normalized_join_profile.py
tests/: test_case_profile.py  test_cli.py  test_config.py  test_format_profile.py  test_inferred_fk_profile.py  test_normalized_join_profile.py  test_output_contract.py  test_runner.py  test_ydata_profile.py
tests/fixtures/: customers.csv
