[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "db-profiler"
version = "0.1.0"
description = "Database profiling scaffold with ydata-profiling integration and custom health output."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "psycopg[binary]>=3.1",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "ydata-profiling>=4.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
db-profiler = "db_profiler.cli:main"

[tool.setuptools.packages.find]
include = ["db_profiler*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
